feat(minecraft): update to 26.2-snapshot-5
See: https://minecraft.wiki/w/Java_Edition_26.2_Snapshot_5